feat: implementar base da sprint 3 com web, security e flyway
Adiciona camada web com Thymeleaf e autenticação/autorização por perfil, além do versionamento do banco com Flyway para H2 e Oracle.